# cadquery-direct-mesh-plugin

./: README.md  plugin.py  pyproject.toml  sample_script.py
.github/workflows/: lint.yml
cadquery_direct_mesh_plugin/: plugin.py
tests/: test_assemblies.py
