[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadquery_direct_mesh_plugin"
version = "0.1.0"
dependencies = [
  "cadquery",
]
requires-python = ">=3.9"
authors = [
  { name="Jeremy Wright" }
]
maintainers = [
  { name="Jeremy Wright" }
]
description = "CadQuery plugin to go directly from a CadQuery assembly to a mesh without relying on Gmsh."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cadquery", "CAD", "engineering", "design", "mesh", "meshing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "model_benchmark_zoo@git+https://github.com/fusion-energy/model_benchmark_zoo.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/CadQuery/assembly-mesh-plugin.git"
"Bug Tracker" = "https://github.com/CadQuery/assembly-mesh-plugin/issues"